# CLR-VotingProgram

./: Cargo.toml  README.md  flake.nix  package-lock.json  package.json
ReferenceDocuments-Editings/: Texas-Calculations-MiniStates
dnas/clr_voting_program/workdir/: dna.yaml
dnas/clr_voting_program/zomes/coordinator/clr_voting_programy/: Cargo.toml
dnas/clr_voting_program/zomes/coordinator/clr_voting_programy/src/: agent_profile.rs  ballot.rs  lib.rs  vote_item.rs
ui/: index.html  package.json
ui/Accounts-Profiles-Registering/: Login.html  NewUsers-Registration.html  Registration.js
ui/USA-GoverningBodies/Executive-Department-SubDepartments-Agencies/: Ballot-001-PrezidentOfficeCandidates-PreferentialListing.html  BallotsIndex-ExecutiveDpt.html
ui/USA-GoverningBodies/Legislature-Senate/: Ballot-PreferentialVoting-US-Senators
ui/USA-LocalJurisdictions/01-NewEngland-SS/: NewEngland-SS.html
ui/USA-LocalJurisdictions/02-NewYork-SS/: NewYork-SS.html
ui/USA-LocalJurisdictions/03-Jersey-Penn-SS/: JerseyPenn-SS.html
ui/USA-LocalJurisdictions/04-GreatLakes-SS/: GreatLakes-SS.html
ui/USA-LocalJurisdictions/05-VirginiaCarolins-SS/: Restructuring-FromTemplate-VirginiaCarolina-SS.html  Virginia-Carolina-SS.html  VirginiaCarolina-SS.html
ui/USA-LocalJurisdictions/06-FloridaGeorgia-SS/: FloridaGeorgia-SS.html
ui/USA-LocalJurisdictions/07-MississippiValley-SS/: MississippiValley-SS.html
ui/USA-LocalJurisdictions/09-Texas-SS/: Texas-SS.html
ui/Z-Arkive/: GoverningBodies-Index.html  IntroMaterial.html
workdir/: happ.yaml  web-happ.yaml
(+90 files in other folders)
