[package]
name = "clr_voting_programy"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "clr_voting_programy"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
holochain_serialized_bytes = { workspace = true }
clr_voting_programy_integrity = { workspace = true }
